// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionsTableComponent should snap like in home page with 2 sessions sorted by start date 1`] = `
<tm-sessions-table
  FeedbackSessionPublishStatus={[Function Object]}
  FeedbackSessionSubmissionStatus={[Function Object]}
  SessionsTableColumn={[Function Object]}
  SessionsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function Number]}
  columnsData={[Function Array]}
  columnsToShow={[Function Array]}
  copySessionEvent={[Function EventEmitter_]}
  courseCandidates={[Function Array]}
  downloadSessionResultsEvent={[Function EventEmitter_]}
  formatDateBriefPipe={[Function FormatDateBriefPipe]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  headerColorScheme="0"
  isSendReminderLoading="false"
  loadResponseRateEvent={[Function EventEmitter_]}
  moveSessionToRecycleBinEvent={[Function EventEmitter_]}
  ngbModal={[Function NgbModal]}
  publishSessionEvent={[Function EventEmitter_]}
  publishStatusName={[Function PublishStatusNamePipe]}
  publishStatusTooltip={[Function PublishStatusTooltipPipe]}
  resendResultsLinkToStudentsEvent={[Function EventEmitter_]}
  rowClicked={[Function Number]}
  rowsData={[Function Array]}
  sendRemindersToAllNonSubmittersEvent={[Function EventEmitter_]}
  sendRemindersToSelectedNonSubmittersEvent={[Function EventEmitter_]}
  sessionsTableRowModels={[Function Array]}
  sessionsTableRowModelsSortBy={[Function Number]}
  sessionsTableRowModelsSortOrder={[Function Number]}
  simpleModalService={[Function SimpleModalService]}
  sortSessionsTableRowModelsEvent={[Function EventEmitter_]}
  submissionStatusName={[Function SubmissionStatusNamePipe]}
  submissionStatusTooltip={[Function SubmissionStatusTooltipPipe]}
  submitSessionAsInstructorEvent={[Function EventEmitter_]}
  unpublishSessionEvent={[Function EventEmitter_]}
>
  <div>
    <tm-sortable-table>
      <table
        class="table table-bordered table-striped"
      >
        <thead>
          <tr>
            <th
              aria-sort="none"
              class="sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Session Name
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Start Date
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  End Date
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                container="body"
              >
                Submissions
              </span>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                container="body"
              >
                Responses
              </span>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                class="ngb-tooltip-class"
                container="body"
              >
                Response Rate
              </span>
            </th>
            <th
              aria-sort="none"
              style="text-align: center;"
            >
              <span
                container="body"
              >
                Action(s)
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </tm-sortable-table>
  </div>
</tm-sessions-table>
`;

exports[`SessionsTableComponent should snap like in sessions page with 2 sessions sorted by session name 1`] = `
<tm-sessions-table
  FeedbackSessionPublishStatus={[Function Object]}
  FeedbackSessionSubmissionStatus={[Function Object]}
  SessionsTableColumn={[Function Object]}
  SessionsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function Number]}
  columnsData={[Function Array]}
  columnsToShow={[Function Array]}
  copySessionEvent={[Function EventEmitter_]}
  courseCandidates={[Function Array]}
  downloadSessionResultsEvent={[Function EventEmitter_]}
  formatDateBriefPipe={[Function FormatDateBriefPipe]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  headerColorScheme="0"
  isSendReminderLoading="false"
  loadResponseRateEvent={[Function EventEmitter_]}
  moveSessionToRecycleBinEvent={[Function EventEmitter_]}
  ngbModal={[Function NgbModal]}
  publishSessionEvent={[Function EventEmitter_]}
  publishStatusName={[Function PublishStatusNamePipe]}
  publishStatusTooltip={[Function PublishStatusTooltipPipe]}
  resendResultsLinkToStudentsEvent={[Function EventEmitter_]}
  rowClicked={[Function Number]}
  rowsData={[Function Array]}
  sendRemindersToAllNonSubmittersEvent={[Function EventEmitter_]}
  sendRemindersToSelectedNonSubmittersEvent={[Function EventEmitter_]}
  sessionsTableRowModels={[Function Array]}
  sessionsTableRowModelsSortBy={[Function Number]}
  sessionsTableRowModelsSortOrder={[Function Number]}
  simpleModalService={[Function SimpleModalService]}
  sortSessionsTableRowModelsEvent={[Function EventEmitter_]}
  submissionStatusName={[Function SubmissionStatusNamePipe]}
  submissionStatusTooltip={[Function SubmissionStatusTooltipPipe]}
  submitSessionAsInstructorEvent={[Function EventEmitter_]}
  unpublishSessionEvent={[Function EventEmitter_]}
>
  <div>
    <tm-sortable-table>
      <table
        class="table table-bordered table-striped"
      >
        <thead>
          <tr>
            <th
              aria-sort="none"
              class="sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Session Name
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Start Date
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  End Date
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                container="body"
              >
                Submissions
              </span>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                container="body"
              >
                Responses
              </span>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                class="ngb-tooltip-class"
                container="body"
              >
                Response Rate
              </span>
            </th>
            <th
              aria-sort="none"
              style="text-align: center;"
            >
              <span
                container="body"
              >
                Action(s)
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </tm-sortable-table>
  </div>
</tm-sessions-table>
`;

exports[`SessionsTableComponent should snap with default fields 1`] = `
<tm-sessions-table
  FeedbackSessionPublishStatus={[Function Object]}
  FeedbackSessionSubmissionStatus={[Function Object]}
  SessionsTableColumn={[Function Object]}
  SessionsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function Number]}
  columnsData={[Function Array]}
  columnsToShow={[Function Array]}
  copySessionEvent={[Function EventEmitter_]}
  courseCandidates={[Function Array]}
  downloadSessionResultsEvent={[Function EventEmitter_]}
  formatDateBriefPipe={[Function FormatDateBriefPipe]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  headerColorScheme="0"
  isSendReminderLoading="false"
  loadResponseRateEvent={[Function EventEmitter_]}
  moveSessionToRecycleBinEvent={[Function EventEmitter_]}
  ngbModal={[Function NgbModal]}
  publishSessionEvent={[Function EventEmitter_]}
  publishStatusName={[Function PublishStatusNamePipe]}
  publishStatusTooltip={[Function PublishStatusTooltipPipe]}
  resendResultsLinkToStudentsEvent={[Function EventEmitter_]}
  rowClicked={[Function Number]}
  rowsData={[Function Array]}
  sendRemindersToAllNonSubmittersEvent={[Function EventEmitter_]}
  sendRemindersToSelectedNonSubmittersEvent={[Function EventEmitter_]}
  sessionsTableRowModels={[Function Array]}
  sessionsTableRowModelsSortBy="0"
  sessionsTableRowModelsSortOrder={[Function Number]}
  simpleModalService={[Function SimpleModalService]}
  sortSessionsTableRowModelsEvent={[Function EventEmitter_]}
  submissionStatusName={[Function SubmissionStatusNamePipe]}
  submissionStatusTooltip={[Function SubmissionStatusTooltipPipe]}
  submitSessionAsInstructorEvent={[Function EventEmitter_]}
  unpublishSessionEvent={[Function EventEmitter_]}
>
  <div
    class="no-session-message"
  >
     There are no feedback sessions in this course. 
  </div>
</tm-sessions-table>
`;
